# src/lib/clrscript/BUILD.bazel
#
# atlas_clrscript — .NET CLR embedding via hostfxr (C++ ↔ C# interop)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "atlas_clrscript",
    srcs = [
        "base_native_provider.cc",
        "clr_bootstrap.cc",
        "clr_error.cc",
        "clr_host.cc",
        "clr_hot_reload.cc",
        "clr_marshal.cc",
        "clr_object.cc",
        "clr_object_registry.cc",
        "clr_script_engine.cc",
        "file_watcher.cc",
        "native_api_provider.cc",
    ] + select({
        "@platforms//os:windows": ["clr_host_windows.cc"],
        "@platforms//os:linux": ["clr_host_linux.cc"],
    }),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = "/src/lib",
    # Define ATLAS_ENGINE_EXPORTS so ATLAS_EXPORT expands to dllexport (not dllimport)
    copts = select({
        "@platforms//os:windows": ["/DATLAS_ENGINE_EXPORTS"],
        "//conditions:default": ["-DATLAS_ENGINE_EXPORTS"],
    }),
    deps = [
        "//src/lib/entitydef:atlas_entitydef",
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/math:atlas_math",
        "//src/lib/platform:atlas_platform",
        "//src/lib/script:atlas_script",
        "@dotnet_host//:dotnet_nethost",
    ],
)

# atlas_engine — shared library (.dll/.so) for C# P/Invoke
# Only compiles clr_native_api.cc; delegates to INativeApiProvider in atlas_clrscript.
cc_binary(
    name = "atlas_engine.dll",
    srcs = ["clr_native_api.cc"],
    copts = select({
        "@platforms//os:windows": ["/DATLAS_ENGINE_EXPORTS"],
        "//conditions:default": ["-DATLAS_ENGINE_EXPORTS", "-fvisibility=hidden"],
    }),
    linkshared = True,
    deps = [
        ":atlas_clrscript",
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/platform:atlas_platform",
    ],
)
