# src/lib/coro/BUILD.bazel
#
# atlas_coro — coroutine-based async primitives

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "atlas_coro",
    srcs = ["pending_rpc_registry.cc"],
    hdrs = [
        "async_sleep.h",
        "await_bg_task.h",
        "cancellation.h",
        "fire_and_forget.h",
        "pending_rpc_registry.h",
        "rpc_call.h",
        "scope_guard.h",
        "task.h",
    ],
    strip_include_prefix = "/src/lib",
    deps = [
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/network:atlas_network",
    ],
)
