# src/lib/db/BUILD.bazel
#
# atlas_db — database abstraction and factory

package(default_visibility = ["//visibility:public"])

# Header-only interface for database backends (db_sqlite, db_xml depend on this)
cc_library(
    name = "atlas_db_iface",
    hdrs = ["idatabase.h"],
    strip_include_prefix = "/src/lib",
    deps = [
        "//src/lib/entitydef:atlas_entitydef",
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/network:atlas_network",
        "//src/lib/server:atlas_server_types",
    ],
)

cc_library(
    name = "atlas_db",
    srcs = ["database_factory.cc"],
    hdrs = ["database_factory.h"],
    strip_include_prefix = "/src/lib",
    deps = [
        ":atlas_db_iface",
        "//src/lib/db_sqlite:atlas_db_sqlite",
        "//src/lib/db_xml:atlas_db_xml",
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/network:atlas_network",
        "//src/lib/platform:atlas_platform",
    ],
)
