# src/lib/db_xml/BUILD.bazel
#
# atlas_db_xml — XML database backend

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "atlas_db_xml",
    srcs = ["xml_database.cc"],
    hdrs = ["xml_database.h"],
    strip_include_prefix = "/src/lib",
    deps = [
        "//src/lib/db:atlas_db_iface",
        "//src/lib/entitydef:atlas_entitydef",
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/network:atlas_network",
        "//src/lib/serialization:atlas_serialization",
    ],
)
