# src/lib/foundation/BUILD.bazel
#
# atlas_foundation — core utilities (logging, memory, containers, time)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "atlas_foundation",
    srcs = [
        "clock.cc",
        "error.cc",
        "log.cc",
        "log_sinks.cc",
        "memory_tracker.cc",
        "pool_allocator.cc",
        "runtime.cc",
        "string_utils.cc",
        "timer_queue.cc",
    ],
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = "/src/lib",
    linkopts = select({
        "@platforms//os:linux": ["-lpthread"],
        "//conditions:default": [],
    }),
    deps = ["//src/lib/platform:atlas_platform_config"],
)
